--- a/finimalism.css
+++ b/finimalism.css
@@ -1,20 +1,3 @@
-@import url('https://cdn.jsdelivr.net/gh/CTalvio/Ultrachromic/overlayprogress.css');
-@import url('https://cdn.jsdelivr.net/gh/CTalvio/Ultrachromic/titlepage/title_banner-logo.css');
-@import url('https://cdn.jsdelivr.net/gh/CTalvio/Ultrachromic/type/dark_withaccent.css');
-@import url('https://cdn.jsdelivr.net/gh/CTalvio/Ultrachromic/cornerindicator/indicator_floating.css');
-@import url('https://cdn.jsdelivr.net/gh/CTalvio/Ultrachromic/fields/fields_border.css');
-@import url('https://cdn.jsdelivr.net/gh/CTalvio/Ultrachromic/login/login_frame.css');
-@import url('https://cdn.jsdelivr.net/gh/CTalvio/Ultrachromic/episodelist/episodes_compactlist.css');
-@import url('https://cdn.jsdelivr.net/gh/CTalvio/Ultrachromic/rounding_circlehover.css');
-@import url('https://cdn.jsdelivr.net/gh/CTalvio/Ultrachromic/base.css');
-@import url('https://cdn.jsdelivr.net/gh/CTalvio/Ultrachromic/accentlist.css');
-@import url('https://cdn.jsdelivr.net/gh/CTalvio/Ultrachromic/fixes.css');
-@import url('https://cdn.jsdelivr.net/gh/CTalvio/Ultrachromic/smallercast.css');
-@import url('https://cdn.jsdelivr.net/gh/CTalvio/Ultrachromic/header/header_transparent.css');
-@import url('https://cdn.jsdelivr.net/gh/CTalvio/Ultrachromic/effects/hoverglow.css');
-@import url('https://cdn.jsdelivr.net/gh/CTalvio/Ultrachromic/effects/glassy.css');
-
-
 /* Overlay Progress Bar */
 #itemDetailPage .itemProgressBar,
 #indexPage .itemProgressBar {
@@ -1461,7 +1444,7 @@ progress::-webkit-progress-value {
     text-align: center;
 }
 
-/* Optionally, add some padding for better visual appearance */
+/* Add some padding for better visual appearance */
 .sectionTitle-cards {
     padding: 10px;
 }
@@ -1500,7 +1483,7 @@ width:6vw
     margin-right: 10px; /* Adjust the margin as needed */
 }
 
-/* Optionally, you can hide the original "Home" and "Favourites" text */
+/* Hide the original "Home" and "Favourites" text */
 .emby-tab-button .emby-button-foreground {
     display: none;
 }
