Update and rename finimalism5-1.css to finimalism5-2.css
Fixed A-Z alphapicker on smaller screens and dashboard elements aren't being squished anymore

--- a/finimalism5-2.css
+++ b/finimalism5-2.css
@@ -1771,15 +1771,7 @@ button.is-emby-button:hover emby-button .navMenuOptionText {
   min-width: 7em;
 }
 
-.padded-left {
-  padding-left: 1.5%;
-}
-
-.padded-right {
-  padding-right: 1.5%;
-}
-
-.emby-scroller {
-  margin-left: 0.5%;
-  margin-right: 0.5%;
+.alphaPickerRow {
+    position: relative;
+    top: 4em;
 }
