--- a/theme.css
+++ b/theme.css
@@ -5,28 +5,30 @@
 
 .skinHeader,
 html {
-    color: #ddd;
-    color: rgba(255, 255, 255, 0.8);
+    color: #f8f8fe;
+    color: rgba(248, 248, 254, 0.973);
 }
 
 .wizardStartForm,
 .ui-corner-all,
 .ui-shadow {
-    background-color: #101010;
+    background-color: #303030;
 }
 
 .emby-collapsible-button {
     border-color: #383838;
-    border-color: rgba(255, 255, 255, 0.135);
+    border-color: rgba(0, 0, 0, 0.135);
 }
 
 .skinHeader-withBackground {
-    background-color: #202020;
+    background: transparent;
 }
 
 .skinHeader.semiTransparent {
+    -webkit-backdrop-filter: none !important;
     backdrop-filter: none !important;
-    background-color: rgba(0, 0, 0, 0.4);
+    background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0));
+    background-color: rgba(0, 0, 0, 0.3);
 }
 
 .layout-tv .skinHeader.semiTransparent {
@@ -41,6 +43,13 @@ html {
     background-image: url(../../assets/img/icon-transparent.png);
 }
 
+.dialog,
+.nowPlayingPlaylist,
+.nowPlayingContextMenu,
+html {
+    background-color: #230c33;
+}
+
 .backgroundContainer {
     background: url(bg.jpg) center top no-repeat #030322;
     -webkit-background-size: cover;
@@ -48,140 +57,8 @@ html {
 }
 
 .backgroundContainer.withBackdrop {
-    opacity: 0.3;
-}
-
-.skinHeader.focuscontainer-x.skinHeader-withBackground.skinHeader-blurred.noHomeButtonHeader {
-    position: relative;
-    z-index: 1;
-}
-
-.skinHeader.focuscontainer-x.skinHeader-withBackground.skinHeader-blurred.noHomeButtonHeader::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: url(bg.jpg) center top no-repeat #030322;
-    background-size: cover;
     opacity: 0.86;
-    z-index: -1;
 }
-
-.sections.homeSectionsContainer {
-    position: relative;
-    z-index: 1;
-}
-
-.sections.homeSectionsContainer::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: url(bg.jpg) center top no-repeat #030322;
-    background-size: cover;
-    opacity: 0.86;
-    z-index: -1;
-}
-
-.itemsContainer.padded-left.padded-right.padded-right-withalphapicker.vertical-wrap {
-    position: relative;
-    z-index: 1;
-}
-
-.itemsContainer.padded-left.padded-right.padded-right-withalphapicker.vertical-wrap::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: url(bg.jpg) center top no-repeat #030322;
-    background-size: cover;
-    opacity: 0.86;
-    z-index: -1;
-}
-
-.skinHeader.focuscontainer-x.skinHeader-withBackground.skinHeader-blurred {
-    position: relative;
-    z-index: 1;
-}
-
-.skinHeader.focuscontainer-x.skinHeader-withBackground.skinHeader-blurred::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: url(bg.jpg) center top no-repeat #030322;
-    background-size: cover;
-    opacity: 0.9;
-    z-index: -1;
-}
-
-.flex.align-items-center.justify-content-center.flex-wrap-wrap.padded-top.padded-left.padded-right.padded-bottom.focuscontainer-x {
-    position: relative;
-    z-index: 1;
-	padding-bottom: 0;
-	padding-top: 0;
-}
-
-.flex.align-items-center.justify-content-center.flex-wrap-wrap.padded-top.padded-left.padded-right.padded-bottom.focuscontainer-x::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: url(bg.jpg) center top no-repeat #030322;
-    background-size: cover;
-    opacity: 0.86;
-    z-index: -1;
-}
-
-.detailPagePrimaryContainer {
-    position: relative;
-    z-index: 2;
-}
-
-.detailPagePrimaryContainer::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: url(bg.jpg) center top no-repeat #030322;
-    background-size: cover;
-    opacity: 0.6;
-    z-index: -1;
-}
-
-
-
-.detailPageSecondaryContainer {
-    position: relative;
-    z-index: 1;
-}
-
-.detailPageSecondaryContainer::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: url(bg.jpg) center top no-repeat #030322;
-    background-size: cover;
-    opacity: 0.86;
-    z-index: -1;
-}
-
-
 
 @media (hover: hover) and (pointer: fine) {
     .paper-icon-button-light:hover:not(:disabled) {
@@ -355,10 +232,6 @@ html {
     background: none;
 }
 
-.noBackdropTransparency .detailPageSecondaryContainer {
-    background-color: #101010;
-}
-
 .listItem-border {
     border-color: rgba(34, 34, 34, 0.9) !important;
 }
@@ -393,6 +266,7 @@ html {
     color: inherit;
     background: #292929;
     border: 0.16em solid #292929;
+    -webkit-border-radius: 0.2em;
     border-radius: 0.2em;
 }
 
@@ -548,6 +422,7 @@ html {
     color: #ddd;
     background: #111;
     padding: 1em;
+    -webkit-border-radius: 0.25em;
     border-radius: 0.25em;
 }
 
@@ -574,6 +449,7 @@ html {
 }
 
 ::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
     box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
 }
 
@@ -590,6 +466,7 @@ html {
 ::-webkit-scrollbar-thumb:horizontal,
 ::-webkit-scrollbar-thumb:vertical {
     border-radius: 2px;
+    -webkit-border-radius: 2px;
     background: center no-repeat #888;
 }
 
@@ -608,46 +485,5 @@ html {
 
 .layout-tv .emby-button.detailFloatingButton:focus {
     background-color: #f2f2f2;
-    color: #00a4dc;
-}
-
-#comicsPlayer,
-#bookPlayer,
-#pdfPlayer {
-    background: #101010;
-}
-
-#comicsPlayer .swiper-pagination {
-    background: #101010;
-    color: #fff;
-}
-
-#bookPlayer .topButtons {
-    color: #fff;
-}
-
-#comicsPlayer .actionButtonIcon,
-#pdfPlayer .actionButtonIcon {
-    color: #fff;
-}
-
-#dialogToc {
-    background-color: #101010;
-}
-
-#dialogToc .bookplayerButtonIcon {
-    color: #ccc;
-}
-
-#dialogToc .bookplayerButtonIcon:hover {
-    color: #00a4dc;
-}
-
-#dialogToc .toc li a:link {
-    color: #ccc;
-}
-
-#dialogToc .toc li a:active,
-#dialogToc .toc li a:hover {
     color: #00a4dc;
 }
