--- a/theme.css
+++ b/theme.css
@@ -5,30 +5,28 @@
 
 .skinHeader,
 html {
-    color: #f8f8fe;
-    color: rgba(248, 248, 254, 0.973);
+    color: #ddd;
+    color: rgba(255, 255, 255, 0.8);
 }
 
 .wizardStartForm,
 .ui-corner-all,
 .ui-shadow {
-    background-color: #303030;
+    background-color: #101010;
 }
 
 .emby-collapsible-button {
     border-color: #383838;
-    border-color: rgba(0, 0, 0, 0.135);
+    border-color: rgba(255, 255, 255, 0.135);
 }
 
 .skinHeader-withBackground {
-    background: transparent;
+    background-color: #202020;
 }
 
 .skinHeader.semiTransparent {
-    -webkit-backdrop-filter: none !important;
     backdrop-filter: none !important;
-    background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0));
-    background-color: rgba(0, 0, 0, 0.3);
+    background-color: rgba(0, 0, 0, 0.4);
 }
 
 .layout-tv .skinHeader.semiTransparent {
@@ -232,6 +230,10 @@ html {
     background: none;
 }
 
+.noBackdropTransparency .detailPageSecondaryContainer {
+    background-color: #101010;
+}
+
 .listItem-border {
     border-color: rgba(34, 34, 34, 0.9) !important;
 }
@@ -266,7 +268,6 @@ html {
     color: inherit;
     background: #292929;
     border: 0.16em solid #292929;
-    -webkit-border-radius: 0.2em;
     border-radius: 0.2em;
 }
 
@@ -422,7 +423,6 @@ html {
     color: #ddd;
     background: #111;
     padding: 1em;
-    -webkit-border-radius: 0.25em;
     border-radius: 0.25em;
 }
 
@@ -449,7 +449,6 @@ html {
 }
 
 ::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
     box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
 }
 
@@ -466,7 +465,6 @@ html {
 ::-webkit-scrollbar-thumb:horizontal,
 ::-webkit-scrollbar-thumb:vertical {
     border-radius: 2px;
-    -webkit-border-radius: 2px;
     background: center no-repeat #888;
 }
 
@@ -485,5 +483,46 @@ html {
 
 .layout-tv .emby-button.detailFloatingButton:focus {
     background-color: #f2f2f2;
+    color: #00a4dc;
+}
+
+#comicsPlayer,
+#bookPlayer,
+#pdfPlayer {
+    background: #101010;
+}
+
+#comicsPlayer .swiper-pagination {
+    background: #101010;
+    color: #fff;
+}
+
+#bookPlayer .topButtons {
+    color: #fff;
+}
+
+#comicsPlayer .actionButtonIcon,
+#pdfPlayer .actionButtonIcon {
+    color: #fff;
+}
+
+#dialogToc {
+    background-color: #101010;
+}
+
+#dialogToc .bookplayerButtonIcon {
+    color: #ccc;
+}
+
+#dialogToc .bookplayerButtonIcon:hover {
+    color: #00a4dc;
+}
+
+#dialogToc .toc li a:link {
+    color: #ccc;
+}
+
+#dialogToc .toc li a:active,
+#dialogToc .toc li a:hover {
     color: #00a4dc;
 }
