--- a/finimalism6-0.css
+++ b/finimalism6-0.css
@@ -1791,3 +1791,7 @@ button.is-emby-button:hover emby-button .navMenuOptionText {
   min-width: 52%;
   max-width: 100%;
 }
+
+.content-primary, .padded-bottom-page, .page, .pageWithAbsoluteTabs .pageTabContent {
+  padding-bottom: 0 !important;
+}
