--- a/theme.css
+++ b/theme.css
@@ -52,10 +52,45 @@ html {
     background: url(bg.jpg) center top no-repeat #030322;
     -webkit-background-size: cover;
     background-size: cover;
+	opacity: 0.2;
 }
 
-.backgroundContainer.withBackdrop {
-    opacity: 0.7;
+.itemsContainer.padded-left.padded-right {
+    position: top;
+    z-index: 1;
+}
+
+.itemsContainer.padded-left.padded-right::before {
+    content: '';
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background: url(bg.jpg) center top no-repeat #030322;
+    background-size: cover;
+    opacity: 0.86;
+    z-index: -1;
+    background-attachment: fixed;
+}
+
+/*Apply bg to detail Ribbon */
+.detailPagePrimaryContainer {
+    position: relative;
+    z-index: 2;
+}
+
+.detailPagePrimaryContainer::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: url(bg.jpg) center top no-repeat #030322;
+    background-size: cover;
+    opacity: 0.6;
+    z-index: -1;
 }
 
 /* Apply bg to detailPage content */
@@ -73,9 +108,10 @@ html {
     height: 100%;
     background: url(bg.jpg) center top no-repeat #030322;
     background-size: cover;
-    opacity: 0.7;
+    opacity: 0.86;
     z-index: -1;
 }
+
 
 
 @media (hover: hover) and (pointer: fine) {
@@ -545,8 +581,4 @@ html {
 #dialogToc .toc li a:active,
 #dialogToc .toc li a:hover {
     color: #00a4dc;
-}
-
-.itemBackdrop {
-    background-image: none !important;
 }
