--- a/theme.css
+++ b/theme.css
@@ -74,6 +74,25 @@ html {
     background-attachment: fixed;
 }
 
+.sectionTitle.sectionTitle-cards.padded-left {
+    position: top;
+    z-index: 1;
+}
+
+.sectionTitle.sectionTitle-cards.padded-left::before {
+    content: '';
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background: url(bg.jpg) center top no-repeat #030322;
+    background-size: cover;
+    opacity: 0.86;
+    z-index: -1;
+    background-attachment: fixed;
+}
+
 /*Apply bg to detail Ribbon */
 .detailPagePrimaryContainer {
     position: relative;
