--- a/finimalism6-0.css
+++ b/finimalism6-0.css
@@ -854,6 +854,89 @@ div[data-role="controlgroup"] a[data-role="button"] {
     margin-top: 0rem;
 }
 
+/* Portrait orientation styles */
+@media (orientation: portrait) {
+  .layout-mobile .itemBackdrop {
+    display: block; /* Display in portrait mode */
+    -webkit-animation: backdrop-fadein .8s ease-in normal both;
+    animation: backdrop-fadein .8s ease-in normal both;
+    background-attachment: fixed;
+    background-position: 50%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100vh !important;
+    position: fixed !important;
+    top: 0;
+    margin-top: 0rem;
+    left: 0;
+    width: 100%;
+    z-index: -1;
+  }
+}
+
+@media (orientation: portrait) {
+  #itemDetailPage .detailLogo {
+    position: static;
+    margin-left: 40%;
+    display: block;
+    -webkit-filter: drop-shadow(0 0 10px rgba(2, 2, 2, 0.75));
+    filter: drop-shadow(0 0 10px rgba(2, 2, 2, 0.75));
+    flex-shrink: 0;
+    background-position: 0 70%;
+    margin-top: -18vh;
+    margin-bottom: 1vh;
+    width: 50vw; /* Adjust as needed */
+  }
+}
+
+@media (orientation: portrait) {
+  .itemDetailPage {
+    padding-top: 13em !important;
+  }
+}
+
+
+/* Landscape orientation styles */
+@media (orientation: landscape) {
+  .layout-mobile .itemBackdrop {
+    display: block; /* Display in portrait mode */
+    -webkit-animation: backdrop-fadein .8s ease-in normal both;
+    animation: backdrop-fadein .8s ease-in normal both;
+    background-attachment: fixed;
+    background-position: 50%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100vh !important;
+    position: fixed !important;
+    top: 0;
+    margin-top: 0rem;
+    left: 0;
+    width: 100%;
+    z-index: -1;
+  }
+}
+
+@media (orientation: landscape) {
+  #itemDetailPage .detailLogo {
+    position: static;
+    margin-left: 50%;
+    display: block;
+    -webkit-filter: drop-shadow(0 0 10px rgba(2, 2, 2, 0.75));
+    filter: drop-shadow(0 0 10px rgba(2, 2, 2, 0.75));
+    flex-shrink: 0;
+    background-position: 0 70%;
+    margin-top: -18vh;
+    margin-bottom: 1vh;
+    width: 45vw; /* Adjust as needed */
+  }
+}
+
+@media (orientation: landscape) {
+  .itemDetailPage {
+    padding-top: 13em !important;
+  }
+}
+
 /*Stop covers from being scrolled on desktop*/
 .layout-desktop .detailImageContainer .card {
     position: fixed !important;
@@ -1903,17 +1986,6 @@ button.is-emby-button:hover emby-button .navMenuOptionText {
   font-size: 8pt;
   overflow: hidden;
   }
-}
-
-
-
-@media (max-width: 1000px)  and (orientation: landscape) {
-    .layout-mobile .itemBackdrop {
-        margin-bottom: 0 !important;
-        background-attachment: scroll !important;
-        background-position: top !important;
-        height: 75vh !important; /* Increase this value to make the backdrop larger */
-    }
 }
 
 .layout-mobile .verticalSection-extrabottompadding {
